--- a/Veespo/Controllers/VEDetailVenue.xib
+++ b/Veespo/Controllers/VEDetailVenue.xib
@@ -19,15 +19,15 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="1">
-            <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+            <rect key="frame" x="0.0" y="94" width="320" height="386"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fb1-Rq-lu1">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="229"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="141"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="0.15227976160000001" green="0.45717075889999997" blue="0.093374040120000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="229" id="apt-Wa-D5j"/>
+                        <constraint firstAttribute="height" constant="141" id="8t2-Gy-Tly"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cerchio" translatesAutoresizingMaskIntoConstraints="NO" id="wkk-e3-mLN">
@@ -38,29 +38,32 @@
                     <rect key="frame" x="135" y="11" width="51" height="60"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="51" id="Arw-6w-UCS"/>
+                        <constraint firstAttribute="width" constant="51" id="w5O-cZ-grX"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="35"/>
+                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="35"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEJ-gI-4Vc">
-                    <rect key="frame" x="10" y="174" width="310" height="25"/>
+                    <rect key="frame" x="10" y="85" width="303" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="25" id="HBB-Oj-on6"/>
+                        <constraint firstAttribute="height" constant="25" id="Zbe-7f-2Da"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="22"/>
+                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="22"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hd-Kj-BiH">
-                    <rect key="frame" x="10" y="203" width="310" height="20"/>
+                    <rect key="frame" x="10" y="116" width="303" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="18"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="d04-U1-Oog"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="18"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </label>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="rAa-YM-va3">
-                    <rect key="frame" x="0.0" y="324" width="320" height="180"/>
+                    <rect key="frame" x="0.0" y="206" width="320" height="180"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -69,15 +72,13 @@
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qf2-yL-f7e">
-                    <rect key="frame" x="98" y="237" width="124" height="49"/>
+                    <rect key="frame" x="98" y="149" width="124" height="49"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
                     <state key="normal" image="vota">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <state key="selected" image="vota"/>
-                    <state key="highlighted" image="vota"/>
                     <connections>
                         <action selector="openVeespo:" destination="-1" eventType="touchUpInside" id="SQE-Re-NIA"/>
                     </connections>
@@ -85,31 +86,30 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Fb1-Rq-lu1" firstAttribute="top" secondItem="1" secondAttribute="top" id="00i-Jr-05Z"/>
-                <constraint firstItem="wkk-e3-mLN" firstAttribute="centerX" secondItem="nsd-gK-q4o" secondAttribute="centerX" id="2tT-tk-XMr"/>
-                <constraint firstItem="wkk-e3-mLN" firstAttribute="top" secondItem="nsd-gK-q4o" secondAttribute="top" id="6F6-r6-G0X"/>
-                <constraint firstItem="rAa-YM-va3" firstAttribute="leading" secondItem="Fb1-Rq-lu1" secondAttribute="leading" id="7JW-fR-hdS"/>
-                <constraint firstItem="qf2-yL-f7e" firstAttribute="top" secondItem="Fb1-Rq-lu1" secondAttribute="bottom" constant="8" symbolic="YES" id="DbS-XO-TFc"/>
-                <constraint firstItem="mEJ-gI-4Vc" firstAttribute="top" secondItem="1" secondAttribute="top" constant="174" id="IST-V1-crt"/>
-                <constraint firstItem="wkk-e3-mLN" firstAttribute="bottom" secondItem="nsd-gK-q4o" secondAttribute="bottom" id="JX0-CL-pUx"/>
-                <constraint firstItem="wkk-e3-mLN" firstAttribute="centerX" secondItem="Fb1-Rq-lu1" secondAttribute="centerX" id="LUl-mi-hCC"/>
-                <constraint firstAttribute="trailing" secondItem="Fb1-Rq-lu1" secondAttribute="trailing" id="Qmy-xq-fgF"/>
-                <constraint firstItem="wkk-e3-mLN" firstAttribute="top" secondItem="1" secondAttribute="top" constant="11" id="Wsv-s2-28T"/>
-                <constraint firstItem="rAa-YM-va3" firstAttribute="top" secondItem="qf2-yL-f7e" secondAttribute="bottom" constant="8" symbolic="YES" id="XcL-G3-KMv"/>
-                <constraint firstItem="mEJ-gI-4Vc" firstAttribute="trailing" secondItem="0hd-Kj-BiH" secondAttribute="trailing" id="Xou-Vf-bdr"/>
-                <constraint firstItem="0hd-Kj-BiH" firstAttribute="top" secondItem="mEJ-gI-4Vc" secondAttribute="bottom" constant="4" id="cdk-nd-PH1"/>
-                <constraint firstItem="rAa-YM-va3" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="cvJ-LH-IHF"/>
-                <constraint firstItem="mEJ-gI-4Vc" firstAttribute="leading" secondItem="0hd-Kj-BiH" secondAttribute="leading" id="d6w-wr-fmV"/>
-                <constraint firstItem="mEJ-gI-4Vc" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="10" id="f5r-rW-U7h"/>
-                <constraint firstAttribute="bottom" secondItem="rAa-YM-va3" secondAttribute="bottom" id="lxW-0l-7I7"/>
-                <constraint firstItem="mEJ-gI-4Vc" firstAttribute="trailing" secondItem="Fb1-Rq-lu1" secondAttribute="trailing" id="mms-38-LP5"/>
-                <constraint firstItem="wkk-e3-mLN" firstAttribute="centerX" secondItem="qf2-yL-f7e" secondAttribute="centerX" id="oJA-MM-eEk"/>
-                <constraint firstItem="qf2-yL-f7e" firstAttribute="top" secondItem="0hd-Kj-BiH" secondAttribute="bottom" constant="14" id="tyV-Yg-Zhs"/>
-                <constraint firstItem="rAa-YM-va3" firstAttribute="trailing" secondItem="Fb1-Rq-lu1" secondAttribute="trailing" id="wFT-de-v3i"/>
+                <constraint firstItem="qf2-yL-f7e" firstAttribute="top" secondItem="0hd-Kj-BiH" secondAttribute="bottom" constant="13" id="4EP-hp-1qR"/>
+                <constraint firstItem="rAa-YM-va3" firstAttribute="trailing" secondItem="Fb1-Rq-lu1" secondAttribute="trailing" id="8eB-Sn-0eD"/>
+                <constraint firstItem="nsd-gK-q4o" firstAttribute="top" secondItem="1" secondAttribute="top" constant="11" id="FYz-vl-Tfx"/>
+                <constraint firstItem="Fb1-Rq-lu1" firstAttribute="top" secondItem="1" secondAttribute="top" id="Hbj-MK-mOA"/>
+                <constraint firstItem="mEJ-gI-4Vc" firstAttribute="trailing" secondItem="0hd-Kj-BiH" secondAttribute="trailing" id="LuE-dq-scM"/>
+                <constraint firstItem="rAa-YM-va3" firstAttribute="top" secondItem="qf2-yL-f7e" secondAttribute="bottom" constant="8" symbolic="YES" id="Q6Y-TD-Dul"/>
+                <constraint firstItem="qf2-yL-f7e" firstAttribute="top" secondItem="Fb1-Rq-lu1" secondAttribute="bottom" constant="8" symbolic="YES" id="SVD-qV-aD9"/>
+                <constraint firstItem="rAa-YM-va3" firstAttribute="leading" secondItem="Fb1-Rq-lu1" secondAttribute="leading" id="Uwu-Qa-x3c"/>
+                <constraint firstItem="nsd-gK-q4o" firstAttribute="bottom" secondItem="wkk-e3-mLN" secondAttribute="bottom" id="VDP-z9-91m"/>
+                <constraint firstItem="Fb1-Rq-lu1" firstAttribute="centerX" secondItem="nsd-gK-q4o" secondAttribute="centerX" id="ddf-87-ueo"/>
+                <constraint firstItem="0hd-Kj-BiH" firstAttribute="top" secondItem="mEJ-gI-4Vc" secondAttribute="bottom" constant="6" id="dqW-Se-8Wg"/>
+                <constraint firstItem="rAa-YM-va3" firstAttribute="centerX" secondItem="qf2-yL-f7e" secondAttribute="centerX" id="iWm-eU-K0f"/>
+                <constraint firstItem="mEJ-gI-4Vc" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="10" id="imv-c9-61w"/>
+                <constraint firstAttribute="bottom" secondItem="rAa-YM-va3" secondAttribute="bottom" id="kcD-Fd-eUK"/>
+                <constraint firstItem="nsd-gK-q4o" firstAttribute="top" secondItem="wkk-e3-mLN" secondAttribute="top" id="mah-FL-9Cq"/>
+                <constraint firstItem="nsd-gK-q4o" firstAttribute="centerX" secondItem="wkk-e3-mLN" secondAttribute="centerX" id="myS-pZ-QYK"/>
+                <constraint firstItem="rAa-YM-va3" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="sGn-at-tDJ"/>
+                <constraint firstAttribute="trailing" secondItem="rAa-YM-va3" secondAttribute="trailing" id="u5O-61-SGI"/>
+                <constraint firstAttribute="trailing" secondItem="mEJ-gI-4Vc" secondAttribute="trailing" constant="7" id="vst-XO-eVF"/>
+                <constraint firstItem="mEJ-gI-4Vc" firstAttribute="leading" secondItem="0hd-Kj-BiH" secondAttribute="leading" id="wC8-1Z-cMn"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
     <resources>
