--- a/Veespo/Controllers/VEHomeViewController.xib
+++ b/Veespo/Controllers/VEHomeViewController.xib
@@ -20,7 +20,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="1" customClass="VEH">
+        <view contentMode="scaleToFill" id="1">
             <rect key="frame" x="0.0" y="64" width="320" height="416"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
